IllinoisGRMHD: ADDING PIECEWISE POLYTROPE SUPPORT -- INITIAL COMMIT -- PLEASE NOTE THAT THE CODE IS NOT YET TESTED BEYOND THIS COMMIG

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/IllinoisGRMHD_headers.h\n"
+      "Overwriting ../src/IllinoisGRMHD_headers.h\n"
      ]
     }
    ],
@@ -176,10 +176,10 @@
     "#define MAX_EOS_PARAMS 10\n",
     "struct eos_struct {\n",
     "  int neos;\n",
-    "  CCTK_REAL rho_tab[MAX_EOS_PARAMS],P_tab[MAX_EOS_PARAMS],eps_tab[MAX_EOS_PARAMS],k_tab[MAX_EOS_PARAMS],gamma_tab[MAX_EOS_PARAMS];\n",
-    "  CCTK_REAL gamma_th;\n",
-    "  CCTK_REAL K_poly;\n",
-    "};  \n",
+    "  CCTK_REAL rho_poly[MAX_EOS_PARAMS-1];\n",
+    "  CCTK_REAL eps_integ_const[MAX_EOS_PARAMS],K_poly[MAX_EOS_PARAMS],Gamma_poly[MAX_EOS_PARAMS];\n",
+    "  CCTK_REAL Gamma_th;\n",
+    "};\n",
     "\n",
     "struct output_stats {\n",
     "  int font_fixed,vel_limited,failure_checker;\n",
@@ -232,7 +232,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for IllinoisGRMHD_headers.h: PASSED!\n"
+      "Validation test for IllinoisGRMHD_headers.h: FAILED!\n",
+      "Diff:\n",
+      "61,64c61,64\n",
+      "<   CCTK_REAL rho_tab[MAX_EOS_PARAMS],P_tab[MAX_EOS_PARAMS],eps_tab[MAX_EOS_PARAMS],k_tab[MAX_EOS_PARAMS],gamma_tab[MAX_EOS_PARAMS];\n",
+      "<   CCTK_REAL gamma_th;\n",
+      "<   CCTK_REAL K_poly;\n",
+      "< };  \n",
+      "---\n",
+      ">   CCTK_REAL rho_poly[MAX_EOS_PARAMS-1];\n",
+      ">   CCTK_REAL eps_integ_const[MAX_EOS_PARAMS],K_poly[MAX_EOS_PARAMS],Gamma_poly[MAX_EOS_PARAMS];\n",
+      ">   CCTK_REAL Gamma_th;\n",
+      "> };\n"
      ]
     }
    ],
@@ -300,7 +311,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 39657 bytes to Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.tex\r\n",
+      "[NbConvertApp] Writing 40044 bytes to Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
