--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/harm_utoprim_2d.c\n"
+      "Overwriting ../src/harm_utoprim_2d.c\n"
      ]
     }
    ],
@@ -905,7 +905,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 61250 bytes to Tutorial-IllinoisGRMHD__harm_utoprim_2d.tex\r\n",
+      "[NbConvertApp] Writing 61254 bytes to Tutorial-IllinoisGRMHD__harm_utoprim_2d.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
