--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
@@ -54,7 +54,7 @@
     "1. [Step 3](#slope_limit): **The `slope_limit()` function**\n",
     "1. [Step 4](#steepen_rho): **The `steepen_rho()` function**\n",
     "1. [Step 5](#monotonize): **The `monotonize()` function**\n",
-    "1. [Step 6](#compute_p_cold__gamma_cold): **The `compute_P_cold__gamma_cold()` function**\n",
+    "1. [Step 6](#compute_p_cold__Gamma_cold): **The `compute_P_cold__Gamma_cold()` function**\n",
     "1. [Step 7](#ftilde_gf_compute): **The `ftilde_gf_compute()` function**\n",
     "1. [Step 8](#ftilde_compute): **The `ftilde_compute()` function**\n",
     "1. [Step 9](#code_validation): **Code validation**\n",
@@ -322,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/loop_defines_reconstruction.h\n"
+      "Overwriting ../src/loop_defines_reconstruction.h\n"
      ]
     }
    ],
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/reconstruct_set_of_prims_PPM.C\n"
+      "Overwriting ../src/reconstruct_set_of_prims_PPM.C\n"
      ]
     }
    ],
@@ -420,9 +420,9 @@
     "static inline CCTK_REAL ftilde_compute(const int flux_dirn,CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES]);\n",
     "static inline CCTK_REAL slope_limit(CCTK_REAL dU,CCTK_REAL dUp1);\n",
     "static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],\n",
-    "                               CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
+    "                               CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
     "                               CCTK_REAL *rho_br_ppm,CCTK_REAL *rho_bl_ppm);\n",
-    "static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold);\n",
+    "static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold);\n",
     "static inline void monotonize(CCTK_REAL U,CCTK_REAL &Ur,CCTK_REAL &Ul);"
    ]
   },
@@ -679,9 +679,9 @@
     "\n",
     "\t// Steepen rho\n",
     "\t// DEPENDENCIES: RHOB face values, RHOB(MINUS2,MINUS1,PLUS0,PLUS1,PLUS2), P(MINUS1,PLUS0,PLUS1), and slope_lim_dU[RHOB](MINUS1,PLUS1)\n",
-    "\tCCTK_REAL P_cold=0,gamma_cold=0;\n",
-    "\tcompute_P_cold__gamma_cold(U[RHOB][PLUS0],eos,  P_cold,gamma_cold);\n",
-    "\tsteepen_rho(U,slope_lim_dU,   eos.gamma_th,P_cold,gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
+    "\tCCTK_REAL P_cold=0,Gamma_cold=0;\n",
+    "\tcompute_P_cold__Gamma_cold(U[RHOB][PLUS0],eos,  P_cold,Gamma_cold);\n",
+    "\tsteepen_rho(U,slope_lim_dU,   eos.Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
     "\n",
     "\t// Output rho\n",
     "\tout_prims_r[RHOB].gf[index_arr[flux_dirn][PLUS0]] = Ur[RHOB][PLUS0];\n",
@@ -1019,7 +1019,7 @@
     "#define ETA1   20.0\n",
     "#define ETA2    0.05\n",
     "#define EPSILON 0.01\n",
-    "static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
+    "static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
     "                               CCTK_REAL *rho_br_ppm,CCTK_REAL *rho_bl_ppm) {\n",
     "\n",
     "  // Next compute centered differences d RHOB and d^2 RHOB\n",
@@ -1057,7 +1057,7 @@
     "\n",
     "\n",
     "  // Compute effective Gamma = (partial P / partial rho0)_s /(P/rho0)\n",
-    "  CCTK_REAL Gamma = gamma_th + (gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];"
+    "  CCTK_REAL Gamma = gamma_th + (Gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];"
    ]
   },
   {
@@ -1361,10 +1361,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='compute_p_cold__gamma_cold'></a>\n",
+    "<a id='compute_p_cold__Gamma_cold'></a>\n",
     "\n",
-    "# Step 6: The `compute_P_cold__gamma_cold()` function \\[Back to [top](#toc)\\]\n",
-    "$$\\label{compute_p_cold__gamma_cold}$$\n",
+    "# Step 6: The `compute_P_cold__Gamma_cold()` function \\[Back to [top](#toc)\\]\n",
+    "$$\\label{compute_p_cold__Gamma_cold}$$\n",
     "\n",
     "This part of the code evaluates $P_{\\rm cold}$ and $\\Gamma_{\\rm cold}$ for the equations of state (EOS) presented in eqs. 13-16 of [Stephens *et al.* (2008)](http://arxiv.org/pdf/0802.0200.pdf).\n",
     "\n",
@@ -1388,12 +1388,12 @@
     "%%writefile -a $outfile_path__reconstruct_set_of_prims_PPM__C\n",
     "\n",
     "\n",
-    "static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold) {\n",
+    "static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold) {\n",
     "  // This code handles equations of state of the form defined\n",
     "  // in Eqs 13-16 in http://arxiv.org/pdf/0802.0200.pdf\n",
     "\n",
     "  // Default in case rho_b == 0.0\n",
-    "  if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }"
+    "  if(rho_b==0.0) { P_cold = 0.0; Gamma_cold = eos.Gamma_poly[0]; return; }"
    ]
   },
   {
@@ -1427,8 +1427,8 @@
     "  if(eos.neos==1) {\n",
     "    // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
     "    // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
-    "    P_cold = eos.k_tab[0]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[0]);\n",
-    "    gamma_cold = eos.gamma_tab[0];\n",
+    "    P_cold = eos.K_poly[0]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[0]);\n",
+    "    Gamma_cold = eos.Gamma_poly[0];\n",
     "    return;\n",
     "  }"
    ]
@@ -1471,14 +1471,14 @@
     "%%writefile -a $outfile_path__reconstruct_set_of_prims_PPM__C\n",
     "\n",
     "  for(int nn=1;nn<eos.neos;nn++) {\n",
-    "    if (rho_b <= eos.rho_tab[nn]  &&  rho_b > eos.rho_tab[nn-1]) {\n",
-    "      P_cold = eos.k_tab[nn]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[nn]);\n",
-    "      gamma_cold = eos.gamma_tab[nn];\n",
+    "    if (rho_b <= eos.rho_poly[nn]  &&  rho_b > eos.rho_poly[nn-1]) {\n",
+    "      P_cold = eos.K_poly[nn]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[nn]);\n",
+    "      Gamma_cold = eos.Gamma_poly[nn];\n",
     "    }\n",
     "  }\n",
-    "  if (rho_b > eos.rho_tab[eos.neos-1]) {\n",
-    "    P_cold = eos.k_tab[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[eos.neos]);\n",
-    "    gamma_cold = eos.gamma_tab[eos.neos];\n",
+    "  if (rho_b > eos.rho_poly[eos.neos-1]) {\n",
+    "    P_cold = eos.K_poly[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[eos.neos]);\n",
+    "    Gamma_cold = eos.Gamma_poly[eos.neos];\n",
     "  }\n",
     "}\n"
    ]
@@ -1836,7 +1836,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for reconstruct_set_of_prims_PPM.C: PASSED!\n"
+      "Validation test for reconstruct_set_of_prims_PPM.C: FAILED!\n",
+      "Diff:\n",
+      "24c24\n",
+      "<                                CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
+      "---\n",
+      ">                                CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
+      "26c26\n",
+      "< static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold);\n",
+      "---\n",
+      "> static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold);\n",
+      "115,117c115,117\n",
+      "< \tCCTK_REAL P_cold=0,gamma_cold=0;\n",
+      "< \tcompute_P_cold__gamma_cold(U[RHOB][PLUS0],eos,  P_cold,gamma_cold);\n",
+      "< \tsteepen_rho(U,slope_lim_dU,   eos.gamma_th,P_cold,gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
+      "---\n",
+      "> \tCCTK_REAL P_cold=0,Gamma_cold=0;\n",
+      "> \tcompute_P_cold__Gamma_cold(U[RHOB][PLUS0],eos,  P_cold,Gamma_cold);\n",
+      "> \tsteepen_rho(U,slope_lim_dU,   eos.Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
+      "231c231\n",
+      "< static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
+      "---\n",
+      "> static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
+      "240c240\n",
+      "<   CCTK_REAL Gamma = gamma_th + (gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
+      "---\n",
+      ">   CCTK_REAL Gamma = gamma_th + (Gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
+      "288c288\n",
+      "< static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold) {\n",
+      "---\n",
+      "> static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold) {\n",
+      "293c293\n",
+      "<   if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }\n",
+      "---\n",
+      ">   if(rho_b==0.0) { P_cold = 0.0; Gamma_cold = eos.Gamma_poly[0]; return; }\n",
+      "298,299c298,299\n",
+      "<     P_cold = eos.k_tab[0]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[0]);\n",
+      "<     gamma_cold = eos.gamma_tab[0];\n",
+      "---\n",
+      ">     P_cold = eos.K_poly[0]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[0]);\n",
+      ">     Gamma_cold = eos.Gamma_poly[0];\n",
+      "303,305c303,305\n",
+      "<     if (rho_b <= eos.rho_tab[nn]  &&  rho_b > eos.rho_tab[nn-1]) {\n",
+      "<       P_cold = eos.k_tab[nn]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[nn]);\n",
+      "<       gamma_cold = eos.gamma_tab[nn];\n",
+      "---\n",
+      ">     if (rho_b <= eos.rho_poly[nn]  &&  rho_b > eos.rho_poly[nn-1]) {\n",
+      ">       P_cold = eos.K_poly[nn]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[nn]);\n",
+      ">       Gamma_cold = eos.Gamma_poly[nn];\n",
+      "308,310c308,310\n",
+      "<   if (rho_b > eos.rho_tab[eos.neos-1]) {\n",
+      "<     P_cold = eos.k_tab[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.gamma_tab[eos.neos]);\n",
+      "<     gamma_cold = eos.gamma_tab[eos.neos];\n",
+      "---\n",
+      ">   if (rho_b > eos.rho_poly[eos.neos-1]) {\n",
+      ">     P_cold = eos.K_poly[eos.neos]*fasterpow_ppm_reconstruct(rho_b,eos.Gamma_poly[eos.neos]);\n",
+      ">     Gamma_cold = eos.Gamma_poly[eos.neos];\n"
      ]
     }
    ],
@@ -1904,7 +1959,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 108404 bytes to Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.tex\r\n",
+      "[NbConvertApp] Writing 111312 bytes to Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
