--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -218,19 +218,20 @@
     "\n",
     "  // We use proper C++ here, for file I/O later.\n",
     "  using namespace std;\n",
-    "\n",
-    "  // FIXME: This is definitely one of the places we need to look at later.\n",
-    "  //           Will leave this comment to emphasize the \"FIXME\" below.\n",
-    "  // FIXME: only for single gamma-law EOS.\n",
+    "    \n",
+    "  /***************************************\n",
+    "   *   Setting up the EOS struct for     *\n",
+    "   * single and piecewise polytropic EOS *\n",
+    "   ***************************************/\n",
+    "  /*\n",
+    "   * The short piece of code below takes care\n",
+    "   * of initializing the EOS parameters.\n",
+    "   * Please refer to the \"inlined_functions.C\"\n",
+    "   * source file for the documentation on the\n",
+    "   * function.\n",
+    "   */\n",
     "  eos_struct eos;\n",
-    "  eos.neos=neos;\n",
-    "  eos.K_poly=K_poly;\n",
-    "  eos.rho_tab[0]=rho_tab[0];\n",
-    "  eos.P_tab[0]=P_tab[0];\n",
-    "  eos.gamma_th=gamma_th;\n",
-    "  eos.eps_tab[0]=eps_tab[0];\n",
-    "  eos.k_tab[0]=k_tab[0];   eos.k_tab[1]=k_tab[1];\n",
-    "  eos.gamma_tab[0]=gamma_tab[0]; eos.gamma_tab[1]=gamma_tab[1];"
+    "  initialize_EOS_struct_from_input(eos);"
    ]
   },
   {
@@ -1054,12 +1055,12 @@
     "    myfile.write((char*)&gamma_th, 1*sizeof(CCTK_REAL));\n",
     "    myfile.write((char*)&neos,     1*sizeof(int));\n",
     "\n",
-    "    myfile.write((char*)gamma_tab, (neos+1)*sizeof(CCTK_REAL));\n",
-    "    myfile.write((char*)k_tab,     (neos+1)*sizeof(CCTK_REAL));\n",
+    "    myfile.write((char*)Gamma_poly, (neos+1)*sizeof(CCTK_REAL));\n",
+    "    myfile.write((char*)K_poly,     (neos+1)*sizeof(CCTK_REAL));\n",
     "\n",
-    "    myfile.write((char*)eps_tab,   neos*sizeof(CCTK_REAL));\n",
-    "    myfile.write((char*)rho_tab,   neos*sizeof(CCTK_REAL));\n",
-    "    myfile.write((char*)P_tab,     neos*sizeof(CCTK_REAL));\n",
+    "    myfile.write((char*)eps_integ_const,   neos*sizeof(CCTK_REAL));\n",
+    "    myfile.write((char*)rho_poly,   neos*sizeof(CCTK_REAL));\n",
+    "    myfile.write((char*)P_poly,     neos*sizeof(CCTK_REAL));\n",
     "\n",
     "    int fullsize=cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2];\n",
     "    myfile.write((char*)x,   (fullsize)*sizeof(CCTK_REAL));\n",
@@ -1188,8 +1189,8 @@
     "\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
-    "  CCTK_REAL kpoly = eos.k_tab[0];\n",
-    "  CCTK_REAL gamma = eos.gamma_tab[0];\n",
+    "  CCTK_REAL kpoly = eos.K_poly[0];\n",
+    "  CCTK_REAL gamma = eos.Gamma_poly[0];\n",
     "  int gamma_equals2 = 1;\n",
     "  if (fabs(gamma-2.0) > 1.e-10) gamma_equals2 = 0;"
    ]
@@ -2422,7 +2423,7 @@
     "\n",
     "\n",
     "inline int font_fix_general_gamma(CCTK_REAL &u_x, CCTK_REAL &u_y, CCTK_REAL &u_z,CCTK_REAL *CONSERVS,CCTK_REAL *PRIMS,CCTK_REAL *METRIC_PHYS,CCTK_REAL *METRIC_LAP_PSI4,eos_struct &eos) {\n",
-    "  CCTK_REAL gamma=eos.gamma_tab[0];\n",
+    "  CCTK_REAL gamma=eos.Gamma_poly[0];\n",
     "  CCTK_REAL rhob;\n",
     "  CCTK_REAL tol = 1.e-15;\n",
     "  CCTK_REAL gam1 = gamma-1.0;\n",
