--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__InitSymBound.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__InitSymBound.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/InitSymBound.C\n"
+      "Overwriting ../src/InitSymBound.C\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__InitSymBound.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 37199 bytes to Tutorial-IllinoisGRMHD__InitSymBound.tex\r\n",
+      "[NbConvertApp] Writing 37203 bytes to Tutorial-IllinoisGRMHD__InitSymBound.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
