--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\n"
+      "Overwriting ../src/Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.C\n"
      ]
     }
    ],
@@ -437,7 +437,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 56955 bytes to Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.tex\r\n",
+      "[NbConvertApp] Writing 56959 bytes to Tutorial-IllinoisGRMHD__Lorenz_psi6phi_rhs__add_gauge_terms_to_A_i_rhs.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
