--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/add_fluxes_and_source_terms_to_hydro_rhss.C\n"
+      "Overwriting ../src/add_fluxes_and_source_terms_to_hydro_rhss.C\n"
      ]
     }
    ],
@@ -374,7 +374,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 51882 bytes to Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.tex\r\n",
+      "[NbConvertApp] Writing 51886 bytes to Tutorial-IllinoisGRMHD__add_fluxes_and_source_terms_to_hydro_rhss.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
