--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/compute_B_and_Bstagger_from_A.C\n"
+      "Overwriting ../src/compute_B_and_Bstagger_from_A.C\n"
      ]
     }
    ],
@@ -383,7 +383,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 44188 bytes to Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.tex\r\n",
+      "[NbConvertApp] Writing 44192 bytes to Tutorial-IllinoisGRMHD__compute_B_and_Bstagger_from_A.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
