--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/harm_u2p_util.c\n"
+      "Overwriting ../src/harm_u2p_util.c\n"
      ]
     }
    ],
@@ -527,7 +527,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 46595 bytes to Tutorial-IllinoisGRMHD__harm_u2p_util.tex\r\n",
+      "[NbConvertApp] Writing 46599 bytes to Tutorial-IllinoisGRMHD__harm_u2p_util.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
