--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/postpostinitial__set_symmetries__copy_timelevels.C\n"
+      "Overwriting ../src/postpostinitial__set_symmetries__copy_timelevels.C\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 41740 bytes to Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.tex\r\n",
+      "[NbConvertApp] Writing 41744 bytes to Tutorial-IllinoisGRMHD__postpostinitial__set_symmetries__copy_timelevels.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
