--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/symmetry__set_gzs_staggered_gfs.C\n"
+      "Overwriting ../src/symmetry__set_gzs_staggered_gfs.C\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 38223 bytes to Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.tex\r\n",
+      "[NbConvertApp] Writing 38227 bytes to Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.tex\r\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
