IllinoisGRMHD: IllinoisGRMHD_headers -- PPEOS Patch: Modified the eos_struct. Changed the names of the variables from X_tab (for tabulated) to X_poly (for polytrope). Removed the variable P_tab, since it was no longer required. Changed the variable eps_tab to eps_integ_consts (for integration constants).

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
@@ -236,7 +236,7 @@
       "Diff:\n",
       "61,64c61,64\n",
       "<   CCTK_REAL rho_tab[MAX_EOS_PARAMS],P_tab[MAX_EOS_PARAMS],eps_tab[MAX_EOS_PARAMS],k_tab[MAX_EOS_PARAMS],gamma_tab[MAX_EOS_PARAMS];\n",
-      "<   CCTK_REAL gamma_th;\n",
+      "<   CCTK_REAL Gamma_th;\n",
       "<   CCTK_REAL K_poly;\n",
       "< };  \n",
       "---\n",
