IllinoisGRMHD: driver_evaluate_MHD_rhs -- PPEOS Patch: modified function calls to comply with the newly created functions (which wil lbe added to inlined_functions.C) and the new eos_struct.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
@@ -300,10 +300,10 @@
     "%%writefile -a $outfile_path__driver_evaluate_MHD_rhs__C\n",
     "\n",
     "    \n",
-    "  /***************************************\n",
-    "   *   Setting up the EOS struct for     *\n",
-    "   * single and piecewise polytropic EOS *\n",
-    "   ***************************************/\n",
+    "  /**********************************\n",
+    "   * Piecewise Polytropic EOS Patch *\n",
+    "   *   Setting up the EOS struct    *\n",
+    "   **********************************/\n",
     "  /*\n",
     "   * The short piece of code below takes care\n",
     "   * of initializing the EOS parameters.\n",
