--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
@@ -496,10 +496,10 @@
     "%%writefile -a $outfile_path__outer_boundaries__C\n",
     "\n",
     "    \n",
-    "  /***************************************\n",
-    "   *   Setting up the EOS struct for     *\n",
-    "   * single and piecewise polytropic EOS *\n",
-    "   ***************************************/\n",
+    "  /**********************************\n",
+    "   * Piecewise Polytropic EOS Patch *\n",
+    "   *   Setting up the EOS struct    *\n",
+    "   **********************************/\n",
     "  /*\n",
     "   * The short piece of code below takes care\n",
     "   * of initializing the EOS parameters.\n",
