IllinoisGRMHD: PPEOS Patch -- Changed the algorithm that goes through the values of rho to find the appropriate EOS that must be used. Modifications follows a nice suggestion by Zach Etienne.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Piecewise_Polytrope_EOS.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__Piecewise_Polytrope_EOS.ipynb
@@ -32,7 +32,8 @@
     "        1. [Step 5.a.i](#ppeos__c_code__prelim__computing_ktab): Determining $\\left\\{K_{1},K_{2},\\ldots,K_{\\rm neos}\\right\\}$\n",
     "        1. [Step 5.a.ii](#ppeos__c_code__prelim__computing_eps_integ_consts): Determining $\\left\\{C_{0},C_{1},C_{2},\\ldots,C_{\\rm neos}\\right\\}$\n",
     "    1. [Step 5.b](#ppeos__c_code__eos_struct_setup) *Setting up the `eos_struct`*\n",
-    "    1. [Step 5.c](#ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold): *The new `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold()` function*\n",
+    "    1. [Step 5.c](#ppeos__c_code__find_polytropic_parameters) *The `find_polytropic_parameters()` function*\n",
+    "    1. [Step 5.d](#ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold): *The new `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold()` function*\n",
     "1. [Step n](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
    ]
   },
@@ -688,7 +689,7 @@
     "  int neos;\n",
     "  CCTK_REAL rho_poly[MAX_EOS_PARAMS-1];\n",
     "  CCTK_REAL eps_integ_const[MAX_EOS_PARAMS],K_poly[MAX_EOS_PARAMS],Gamma_poly[MAX_EOS_PARAMS];\n",
-    "  CCTK_REAL gamma_th;\n",
+    "  CCTK_REAL Gamma_th;\n",
     "};\n",
     "```"
    ]
@@ -760,10 +761,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ppeos__c_code__find_polytropic_k_and_gamma'></a>\n",
     "\n",
+    "## Step 5.c: The new `find_polytropic_K_and_Gamma()` function \\[Back to [top](#toc)\\]\n",
+    "$$\\label{ppeos__c_code__find_polytropic_k_and_gamma}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a Piecewise_Polytrope_EOS.C\n",
+    "\n",
+    "/* Function    : find_polytropic_K_and_Gamma_index()\n",
+    " * Authors     : Leo Werneck & Zach Etienne\n",
+    " * Description : For a given value of rho, find the\n",
+    " *               appropriate values of Gamma_poly\n",
+    " *               and K_poly by determining the appropriate\n",
+    " *               index\n",
+    " * Dependencies: initialize_EOS_struct_from_input()\n",
+    " *             : cctk_parameters.h (FIXME)\n",
+    " *\n",
+    " * Inputs      : eos             - a struct containing the following\n",
+    " *                                 relevant quantities:\n",
+    " *             : neos            - number of polytropic EOSs used\n",
+    " *             : rho_poly        - array of rho values that determine\n",
+    " *\n",
+    " * Outputs     : index     - the appropriate index for the K_poly\n",
+    " *                           and Gamma_poly array\n",
+    " */\n",
+    "static inline int find_polytropic_K_and_Gamma_index(eos_struct eos, CCTK_REAL rho_in) {\n",
+    "  \n",
+    "   /* We want to find the appropriate polytropic EOS for the\n",
+    "    * input value rho_in. Remember that:\n",
+    "    *\n",
+    "    * if rho < rho_{0}:                P_{0} , index: 0\n",
+    "    * if rho >= rho_{0} but < rho_{1}: P_{1} , index: 1\n",
+    "    * if rho >= rho_{1} but < rho_{2}: P_{2} , index: 2\n",
+    "    *                      ...\n",
+    "    * if rho >= rho_{j-1} but < rho_{j}: P_{j} , index: j\n",
+    "    *\n",
+    "    * Then, a simple way of determining the index is through\n",
+    "    * the formula:\n",
+    "    *  ---------------------------------------------------------------------------\n",
+    "    * | index = (rho >= rho_{0}) + (rho >= rho_{1}) + ... + (rho >= rho_{neos-2}) |\n",
+    "    *  ---------------------------------------------------------------------------\n",
+    "    */\n",
+    "    int polytropic_index = 0;\n",
+    "    for(int j=0; j<= neos-2; j++) polytropic_index += (rho_in >= eos.rho_poly[j]);\n",
+    "    \n",
+    "    return polytropic_index;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold'></a>\n",
     "\n",
-    "## Step 5.c: The new `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold()` function \\[Back to [top](#toc)\\]\n",
+    "## Step 5.d: The new `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold()` function \\[Back to [top](#toc)\\]\n",
     "$$\\label{ppeos__c_code__compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold}$$\n",
     "\n",
     "We now write down the updated version of the `compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold()` function, which is found in the `inlined_functions.C` source file of `IllinoisGRMHD`, and documented in the [`IllinoisGRMHD`'s inlined functions NRPy+ tutorial module](Tutorial-IllinoisGRMHD__inlined_functions.ipynb)."
@@ -838,8 +897,6 @@
     "    Gamma_cold  = eos.Gamma_poly[0];\n",
     "    return;\n",
     "  }\n",
-    "\n",
-    "  CCTK_REAL U_RHOB_inv = 1.0/U[RHOB];\n",
     "    \n",
     "  /*  --------------------------------------------------\n",
     "   * | Single and Piecewise Polytropic EOS modification |\n",
@@ -859,98 +916,46 @@
     "   * a TODO/FIXME for now.\n",
     "   */\n",
     "\n",
-    "  /*************************************************\n",
-    "   * First case: rho < rho_{0} or single polytrope *\n",
-    "   *************************************************/\n",
-    "  if(U[RHOB] < eos.rho_poly[0] || eos.neos==1) {\n",
-    "      /* First, we compute the pressure, which here is just like\n",
-    "       * the case of a single polytropic EOS:\n",
-    "       *\n",
-    "       * P_{0} = K_{0} * rho^(Gamma_{0}), rho < rho_{0}\n",
-    "       */\n",
-    "      P_cold = eos.K_poly[0]*fasterpow_ppm_reconstruct(U[RHOB],eos.Gamma_poly[0]);\n",
+    "  /* First, we compute the pressure, which in the case of a\n",
+    "   * piecewise polytropic EOS is given by\n",
+    "   *\n",
+    "   *           /   P_{1}      /    K_{1} * rho^(Gamma_{1})       ,      rho_{0} <= rho < rho_{1}\n",
+    "   *           |    ...       |            ...\n",
+    "   * P(rho) = <    P_{j}   = <     K_{j} * rho^(Gamma_{j})       ,    rho_{j-1} <= rho < rho_{j}\n",
+    "   *           |    ...       |            ...\n",
+    "   *           \\ P_{neos-2}   \\ K_{neos-2} * rho^(Gamma_{neos-2}), rho_{neos-3} <= rho < rho_{neos-2}\n",
+    "   *\n",
+    "   * The index j is determined by the find_polytropic_K_and_Gamma_index() function.\n",
+    "   */\n",
+    "  // Set up useful auxiliary variables\n",
+    "  int polytropic_index      = find_polytropic_K_and_Gamma_index(eos,U[RHOB]);\n",
+    "  CCTK_REAL U_RHOB_inv      = 1.0/U[RHOB];\n",
+    "  CCTK_REAL K_poly          = eos.K_poly[polytropic_index];\n",
+    "  CCTK_REAL Gamma_poly      = eos.Gamma_poly[polytropic_index];\n",
+    "  CCTK_REAL eps_integ_const = eos.eps_integ_const[polytropic_index];\n",
+    "    \n",
+    "  // Then compute P_{cold}\n",
+    "  P_cold = K_poly*fasterpow_ppm_reconstruct(U[RHOB],Gamma_poly);\n",
     "\n",
-    "      // Then we compute dP_{0}/drho = P_{0}Gamma_{0}/rho\n",
-    "      dPcold_drho = eos.Gamma_poly[0]*P_cold*U_RHOB_inv;\n",
+    "  // Next compute dP/drho = Gamma * P / rho\n",
+    "  dPcold_drho = Gamma_poly*P_cold*U_RHOB_inv;\n",
     "\n",
-    "      /* Then we compute the specific internal energy,\n",
-    "       *\n",
-    "       * eps(rho) = P_{0}/(rho*(Gamma_{0}-1)), rho < rho_{0}\n",
-    "       */\n",
-    "      eps_cold = P_cold * U_RHOB_inv / (eps.Gamma_poly[0] - 1);\n",
+    "  /* Then we compute the cold component of the specific internal energy,\n",
+    "   * which in the case of a piecewise polytropic EOS is given by (neos -> N)\n",
+    "   *\n",
+    "   *             |   P_{1}/(rho*(Gamma_{1}-1))   + C_{1}  ,   rho_{0} <= rho < rho_{1}\n",
+    "   *             |                     ...\n",
+    "   * eps(rho) = <    P_{j}/(rho*(Gamma_{j}-1))   + C_{j}  , rho_{j-1} <= rho < rho_{j}\n",
+    "   *             |                     ...\n",
+    "   *             | P_{N-2}/(rho*(Gamma_{N-2}-1)) + C_{N-2}, rho_{N-3} <= rho < rho_{N-2}\n",
+    "   */\n",
+    "  eps_cold = P_cold*U_RHOB_inv/(Gamma_poly-1.0) + eps_integ_const;\n",
     "\n",
-    "      // Then we compute eps_th, h, and set Gamma_cold = Gamma_poly[j].\n",
-    "      eps_th = (U[PRESSURE] - P_cold)/(eos.Gamma_th-1.0)*U_RHOB_inv;\n",
-    "      h = 1.0 + eps_cold + eps_th + U[PRESSURE]*U_RHOB_inv;\n",
-    "      Gamma_cold = eos.Gamma_poly[0];\n",
-    "      \n",
-    "      if( eos.neos==1 ) return;\n",
-    "  }\n",
+    "  // Then we compute eps_th, h, and set Gamma_cold = Gamma_poly[j].\n",
+    "  eps_th = (U[PRESSURE] - P_cold)/(eos.Gamma_th-1.0)*U_RHOB_inv;\n",
+    "  h = 1.0 + eps_cold + eps_th + U[PRESSURE]*U_RHOB_inv;\n",
+    "  Gamma_cold = Gamma_poly;\n",
     "\n",
-    "  /**********************************************\n",
-    "   * Second case: rho_{0} <= rho < rho_{neos-2} *\n",
-    "   **********************************************/\n",
-    "  if(eos.neos>2) {\n",
-    "    for(int j=1;j<eos.neos;j++) {\n",
-    "      if (eos.rho_poly[j-1] <= U[RHOB] && U[RHOB] < eos.rho_poly[j]) {\n",
-    "        /* First, we compute the pressure, which in the case of a\n",
-    "         * piecewise polytropic EOS is given by\n",
-    "         *\n",
-    "         *           /   P_{1}      /    K_{1} * rho^(Gamma_{1})       ,      rho_{0} <= rho < rho_{1}\n",
-    "         *           |    ...       |            ...\n",
-    "         * P(rho) = <    P_{j}   = <     K_{j} * rho^(Gamma_{j})       ,    rho_{j-1} <= rho < rho_{j}\n",
-    "         *           |    ...       |            ...\n",
-    "         *           \\ P_{neos-2}   \\ K_{neos-2} * rho^(Gamma_{neos-2}), rho_{neos-3} <= rho < rho_{neos-2}\n",
-    "         */\n",
-    "        P_cold = eos.K_poly[j]*fasterpow_ppm_reconstruct(U[RHOB],eos.Gamma_poly[j]);\n",
-    "\n",
-    "        // Next compute dP/drho = Gamma * P / rho\n",
-    "        dPcold_drho = eos.Gamma_poly[j]*P_cold*U_RHOB_inv;\n",
-    "\n",
-    "        /* Then we compute the cold component of the specific internal energy,\n",
-    "         * which in the case of a piecewise polytropic EOS is given by (neos -> N)\n",
-    "         *\n",
-    "         *             |   P_{1}/(rho*(Gamma_{1}-1))   + C_{1}  ,   rho_{0} <= rho < rho_{1}\n",
-    "         *             |                     ...\n",
-    "         * eps(rho) = <    P_{j}/(rho*(Gamma_{j}-1))   + C_{j}  , rho_{j-1} <= rho < rho_{j}\n",
-    "         *             |                     ...\n",
-    "         *             | P_{N-2}/(rho*(Gamma_{N-2}-1)) + C_{N-2}, rho_{N-3} <= rho < rho_{N-2}\n",
-    "         */\n",
-    "        eps_cold = P_cold*U_RHOB_inv/(eos.Gamma[j]-1.0) + eos.eps_integ_const[j];\n",
-    "\n",
-    "        // Then we compute eps_th, h, and set Gamma_cold = Gamma_poly[j].\n",
-    "        eps_th = (U[PRESSURE] - P_cold)/(eos.Gamma_th-1.0)*U_RHOB_inv;\n",
-    "        h = 1.0 + eps_cold + eps_th + U[PRESSURE]*U_RHOB_inv;\n",
-    "        Gamma_cold = eos.Gamma_poly[j];\n",
-    "      }\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  /***********************************\n",
-    "   * Third case: rho >= rho_{neos-2} *\n",
-    "   ***********************************/\n",
-    "  if (U[RHOB] >= eos.rho_poly[eos.neos-2]) {\n",
-    "    /* First, we compute the pressure, which here is just like\n",
-    "     * the case of a single polytropic EOS:\n",
-    "     *\n",
-    "     * P_{neos-1} = K_{neos-1} * rho^(Gamma_{neos-1}), rho >= rho_{neos-2}\n",
-    "     */\n",
-    "    P_cold = eos.K_poly[neos-1]*fasterpow_ppm_reconstruct(U[RHOB],eos.Gamma_poly[neos-1]);\n",
-    "\n",
-    "    // Then we compute dP_{neos-1}/drho = P_{neos-1}Gamma_{neos-1}/rho\n",
-    "    dPcold_drho = eos.Gamma_poly[neos-1]*P_cold*U_RHOB_inv;\n",
-    "\n",
-    "    /* Then we compute the specific internal energy,\n",
-    "     *\n",
-    "     * eps(rho) = P_{neos-1}/(rho*(Gamma_{neos-1}-1)), rho >= rho_{neos-2}\n",
-    "     */\n",
-    "    eps_cold = P_cold * U_RHOB_inv / (eps.Gamma_poly[neos-1] - 1);\n",
-    "\n",
-    "    // Then we compute eps_th, h, and set Gamma_cold = Gamma_poly[j].\n",
-    "    eps_th = (U[PRESSURE] - P_cold)/(eos.Gamma_th-1.0)*U_RHOB_inv;\n",
-    "    h = 1.0 + eps_cold + eps_th + U[PRESSURE]*U_RHOB_inv;\n",
-    "    Gamma_cold = eos.Gamma_poly[neos-1];\n",
-    "  }\n",
     "}\n",
     "\n"
    ]
