--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__the_conservative_to_primitive_algorithm.ipynb
@@ -1476,7 +1476,7 @@
     "  int startguess=1;\n",
     "\n",
     "  CCTK_REAL u0L=1.0;\n",
-    "  CCTK_REAL Gamma_poly,K_poly;\n",
+    "  CCTK_REAL K_poly,Gamma_poly;\n",
     "\n",
     "  for(int which_guess=startguess;which_guess<3;which_guess++) {\n",
     "    int check;\n",
@@ -1495,7 +1495,9 @@
     "       * Gamma and K parameters to be used\n",
     "       * within this function.\n",
     "       */\n",
-    "      find_polytropic_K_and_Gamma(eos,rho_b_oldL,Gamma_poly,K_poly);\n",
+    "      int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b_oldL);\n",
+    "      K_poly     = eos.K_poly[polytropic_index];\n",
+    "      Gamma_poly = eos.Gamma_poly[polytropic_index];\n",
     "\n",
     "      // After that, we compute P_cold\n",
     "      P_oldL = K_poly*fasterpow_ppm_reconstruct(rho_b_oldL,Gamma_poly);\n",
@@ -1520,7 +1522,9 @@
     "       * Gamma and K parameters to be used\n",
     "       * within this function.\n",
     "       */\n",
-    "      find_polytropic_K_and_Gamma(eos,rho_b_oldL,Gamma_poly,K_poly);\n",
+    "      int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b_oldL);\n",
+    "      K_poly     = eos.K_poly[polytropic_index];\n",
+    "      Gamma_poly = eos.Gamma_poly[polytropic_index];\n",
     "\n",
     "      // After that, we compute P_cold\n",
     "      P_oldL = K_poly*fasterpow_ppm_reconstruct(rho_b_oldL,Gamma_poly);\n",
@@ -1952,7 +1956,9 @@
     "         * Gamma and K parameters to be used\n",
     "         * within this function.\n",
     "         */\n",
-    "        find_polytropic_K_and_Gamma(eos,prim[RHO],Gamma_poly,K_poly);\n",
+    "        int polytropic_index = find_polytropic_K_and_Gamma_index(eos,prim[RHO]);\n",
+    "        K_poly     = eos.K_poly[polytropic_index];\n",
+    "        Gamma_poly = eos.Gamma_poly[polytropic_index];\n",
     "\n",
     "        // After that, we compute P_cold\n",
     "        P_cold = K_poly*fasterpow_ppm_reconstruct(prim[RHO],Gamma_poly);\n",
